feat: allow to score V2 API
APIM-7611